# AI-exploration

./: .gitignore  README.md  pyproject.toml
.idx/: dev.nix
deep-learning/pytorch/: deep-learning-overview.ipynb
examples/numpy/: Numpy.ipynb
numpy/: 001_Numpy_Tutorial.ipynb  README.md
numpy/array-attributes/: index.md
numpy/array-indexing/: index.md
numpy/creating-arrays/: index.md
numpy/introduction/: index.md
setup/: README.md
setup/miniconda/: index.md
